# dio_tdd_fastapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
store/: main.py
store/controllers/: product.py
store/core/: config.py  exceptions.py
store/models/: base.py
store/schemas/: base.py  product.py
store/tests/schemas/: factories.py  test_product.py
store/usecases/: product.py
tests/: factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
